updated code, test folder segratation, readme updated, code coverage increased