@@ -78,7 +78,7 @@
 			<artifactId>cucumber-guice</artifactId>
 			<version>5.4.0</version>
 			<scope>test</scope>
-		</dependency> 
+		</dependency>
 
 		<dependency>
 			<groupId>com.google.inject</groupId>
@@ -89,7 +89,30 @@
 
 	</dependencies>
 
-	<repositories>
+	<build>
+		<plugins>
+
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+						<configuration>
+							<classifier>spring-boot</classifier>
+							<mainClass>
+								org.opengroup.osdu.schema.SchemaApplication
+							</mainClass>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+		</plugins>
+	</build>
+<repositories>
 		<repository>
 			<id>${gitlab-server}</id>
 			<url>https://community.opengroup.org/api/v4/groups/17/-/packages/maven</url>
@@ -106,48 +129,6 @@
 			<url>https://community.opengroup.org/api/v4/projects/26/packages/maven</url>
 		</snapshotRepository>
 	</distributionManagement>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<goal>repackage</goal>
-						</goals>
-						<configuration>
-							<classifier>spring-boot</classifier>
-							<mainClass>
-								org.opengroup.osdu.schema.SchemaApplication
-							</mainClass>
-						</configuration>
-					</execution>
-
-				</executions>
-			</plugin>
-			<plugin>
-				<artifactId>maven-war-plugin</artifactId>
-				<configuration>
-					<failOnMissingWebXml>false</failOnMissingWebXml>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M3</version>
-				<configuration>
-					<skipTests>${skipUnitTests}</skipTests>
-					<forkCount>3</forkCount>
-					<reuseForks>true</reuseForks>
-					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
-				</configuration>
-			</plugin>
-
-		</plugins>
-	</build>
 
 
 </project>
